# TrabFinalAD

./: Cargo.toml
src/: main.rs
src/simulador/: cliente.rs  enums.rs  evento.rs  mod.rs  simulador.rs
src/simulador/estatisticas/: espera.rs  exponencial.rs  mod.rs  numero_clientes.rs
