[package]
name = "trab_final_ad"
version = "0.1.0"
authors = ["Matheus Araujo Borges <matheusaraujob@dcc.ufrj.br>", "Marcelo Nóbrega <celinho@ic.ufrj.br>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"